Change Solution to private